--- a/stopwords/pom.xml
+++ b/stopwords/pom.xml
@@ -83,7 +83,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>stopwordspackage.TwitterKeyWorkDriver</mainClass>
+                                    <mainClass>stopwordspackage.TwitterStopWordDriver</mainClass>
                                 </transformer>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ApacheLicenseResourceTransformer">
                                 </transformer>
